test/simple/ill-typed/wrap_lazy_mu3.caprice
(* TEST
  typing = ill-typed;
  flags = " -s -w";
  typecheck;
*)

(* homemade list *)
let lst a = mu t.
  | `Empty of unit
  | `Cons of a * t

(* TODO: this error isn't found and is also marked with
    a FIXME in the code. *)
let f (ls : lst (int -> int)) : lst (int -> int) =
  let w : lst ({ i : int | i > 0 } -> int) = ls in
  w (* ERROR: the wrapper conflicts with the return type *)

let f (ls : lst (int -> int)) : lst (int -> int) =
  let t : type = lst ({ i : int | i > 0 } -> int) in (* pulls on the type *)
  (* now wrap the homemade list with the once-unrolled recursive type *)
  let w : t = ls in
  w (* ERROR: the wrapper conflicts with the return type *)

